@@ -1,3 +1,4 @@
+* Add Erase Party wizard
 * Search party also by contact mechanisms
 * Add contact_mechanism_get
 * Add name to contact mechanism
